[tool.poetry]
name = "ying"
version = "0.0.0"
description = ""
license = "MIT"
authors = ["Yannick Fricke"]
readme = "README.md"

[tool.poetry.scripts]
ying = "ying:main"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
parsita = "^2.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-mock = "*"
pytest-cov = "^5.0.0"


[tool.poetry.group.code-quality.dependencies]
ruff = "^0.5.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
